<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_detail"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextColor="@color/whiter"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextColor="@color/whiter"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/anime_title">

            <ImageView
                android:id="@+id/img_cover_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_cover"
                android:fitsSystemWindows="true"
                android:foreground="@color/black_50t"
                android:scaleType="centerCrop"
                android:src="@drawable/cover_placeholder"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">

            <ImageView
                android:id="@+id/img_poster_detail"
                android:layout_width="175dp"
                android:layout_height="250dp"
                android:contentDescription="@string/image_poster"
                android:scaleType="centerCrop"
                android:src="@drawable/imageempty"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_en_jp_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/anime_title_en_jp"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/img_poster_detail"
                app:layout_constraintTop_toBottomOf="@+id/img_poster_detail" />

            <TextView
                android:id="@+id/tv_title_ja_jp_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/anime_title_ja_jp"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/img_poster_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_en_jp_detail" />

            <TextView
                android:id="@+id/tv_synopsis_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:justificationMode="inter_word"
                android:text="@string/lorem_ipsum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_ja_jp_detail"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/tv_popularity_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:drawablePadding="4dp"
                android:text="@string/popularity_rank"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_fire"
                app:drawableTint="@color/black"
                app:layout_constraintStart_toEndOf="@+id/img_poster_detail"
                app:layout_constraintTop_toTopOf="@+id/img_poster_detail" />

            <TextView
                android:id="@+id/tv_favorite_count_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:text="@string/favorite_count"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_favorite"
                app:drawableTint="@color/black"
                app:layout_constraintStart_toStartOf="@+id/tv_popularity_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_popularity_detail" />

            <TextView
                android:id="@+id/tv_user_count_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:text="@string/user_count"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_person"
                app:drawableTint="@color/black"
                app:layout_constraintStart_toStartOf="@+id/tv_favorite_count_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_favorite_count_detail" />

            <TextView
                android:id="@+id/tv_status_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:text="@string/status"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_flag"
                app:drawableTint="@color/black"
                app:layout_constraintStart_toStartOf="@+id/tv_popularity_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_count_detail" />

            <TextView
                android:id="@+id/tv_episode_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:text="@string/episode_count"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_play"
                app:drawableTint="@color/black"
                app:layout_constraintStart_toStartOf="@+id/tv_status_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_status_detail" />

            <TextView
                android:id="@+id/tv_average_rating_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:text="@string/rating"
                android:textSize="24sp"
                app:drawableStartCompat="@drawable/ic_star"
                app:drawableTint="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/img_poster_detail"
                app:layout_constraintStart_toStartOf="@+id/tv_user_count_detail" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:contentDescription="@string/favorite_button"
        android:focusable="true"
        android:src="@drawable/ic_favorite_outline"
        app:fabSize="normal"
        app:layout_anchor="@id/appbar_detail"
        app:layout_anchorGravity="end|bottom" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_detail"
        style="@style/SpinKitView.ThreeBounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:SpinKit_Color="@color/white"
        app:layout_anchor="@id/collapsing_toolbar_detail"
        app:layout_anchorGravity="center|center_vertical" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>