<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".discover.DiscoverFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_discover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_anime" />

    <com.cooltechworks.views.shimmer.ShimmerRecyclerView
        app:shimmer_demo_shimmer_color="@color/shimmer_fg"
        android:id="@+id/rv_discover_shimmer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/item_anime_placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:shimmer_demo_angle="20"
        app:shimmer_demo_child_count="10"
        app:shimmer_demo_grid_child_count="3"
        app:shimmer_demo_layout="@layout/item_anime_placeholder"
        app:shimmer_demo_layout_manager_type="grid" />

    <ImageView
        android:id="@+id/img_start_search"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/image_start_search"
        android:src="@drawable/empty"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tv_start_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/start_searching_first"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/img_start_search"
        app:layout_constraintStart_toStartOf="@+id/img_start_search"
        app:layout_constraintTop_toBottomOf="@+id/img_start_search" />

    <ImageView
        android:id="@+id/img_not_found"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/image_not_found"
        android:src="@drawable/ic_mood_bad"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tv_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_found"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/img_not_found"
        app:layout_constraintStart_toStartOf="@+id/img_not_found"
        app:layout_constraintTop_toBottomOf="@+id/img_not_found" />


</androidx.constraintlayout.widget.ConstraintLayout>